# AdventOfCode2025

./: README.md
day1/2star/: task.sh
day11/1star/: main.js
day11/2star/: main.js
day11/2star/utils/: readFile.js
day11_Javascript/1star/utils/: readFile.js
day1_Bash/1star/: solution.sh  task.sh
day2/1star/: Main.java  Solution.java
day2_Java/2star/: Solution.java
day3/one_star/src/: read_file.rs
day3/two_star/: .gitignore  Cargo.toml
day3/two_star/src/: read_file.rs
day3_Rust/one_star/: Cargo.toml
day3_Rust/one_star/src/: main.rs
day4/1star/: 1star.csproj  Main.cs  Solution.cs
day4/2star/: 2star.csproj
day4_C#/2star/: Main.cs  Solution.cs
day5/1star/: Makefile
day5/1star/src/: main.cpp
day5/2star/: CMakeLists.txt
day5/2star/src/: main.cpp  readFile.cpp
day5_C++/2star/include/: readFile.h
day6/1star/: Makefile
day6/1star/src/: transpone_matrix.c
day6/2star/: input.txt
day6/2star/include/: calc_diag.h  get_matrix.h
day6/2star/src/: calc_diag.c  main.c
day6/include/: transpone_matrix.h
day6/src/: get_matrix.c
day6_C/1star/: .gitignore
day6_C/1star/src/: main.c
day6_C/2star/: Makefile
day6_C/2star/include/: calc_diag.h
day6_C/2star/src/: main.c
day7/2star/: main.py
day7_Python/2star/: main.py
day9/1star/: main.go
day9_Go/1star/: go.mod
day9_Go/2star/: go.mod  main.go
day9_Go/2star/utils/: readFile.go
